# rio-airbnb-data-analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: xgb_model_20240923_175852.pkl  xgb_model_20240924_152604.pkl  xgb_model_20241015_164842.pkl
notebooks/: auto_ml.ipynb  eda.ipynb  feature_engineering.ipynb  heatmap_mediana_rio_de_janeiro.html  raw_to_bronze.ipynb  regressao_gama.ipynb  regressao_lognormal.ipynb  xgboost.ipynb
rio-airbnb-data-analysis/: __init__.py  dataset.py  features.py  plots.py
rio-airbnb-data-analysis/modeling/: predict.py  train.py
rio_airbnb/: __init__.py  dataset.py  features.py  plots.py
rio_airbnb/modeling/: predict.py  train.py
