[build-system]
requires = ["flit_core >=3.2,<4", "poetry-core>=1.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "rio-airbnb-data-analysis"
version = "0.0.1"
description = "Análise dos dados de anúncios e avaliações do Airbnb para o Rio de Janeiro, obtidos do Inside Airbnb"
authors = [
  { name = "Bruno Rateiro" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rio-airbnb-data-analysis"]
force_sort_within_sections = true

[tool.poetry]
name = "rio-airbnb-data-analysis"
version = "0.1.0"
description = "Análise dos dados de anúncios e avaliações do Airbnb para o Rio de Janeiro, obtidos do Inside Airbnb"
authors = ["Bruno Rateiro <bruno.rateiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
dfsummary = "^0.4"
summarytools = "^0.3.0"
distfit = "^1.8.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
jinja2 = "^3.1.4"
dython = "^0.7.6"
setuptools = "^71.1.0"
plotly = "5.3.1"
nbformat = "^4.2.0"
hiplot = "^0.1.33"
statsmodels = "^0.14.2"
scipy = "^1.14.0"
folium = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

