[build-system]
requires = ["flit_core >=3.2,<4", "poetry-core>=1.0.0"]
build-backend = "flit_core.buildapi"

[project]
name = "rio_airbnb"
version = "0.0.1"
description = "Análise dos dados de anúncios e avaliações do Airbnb para o Rio de Janeiro, obtidos do Inside Airbnb"
authors = [
  { name = "Bruno Rateiro" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["rio_airbnb"]
force_sort_within_sections = true

[tool.poetry]
name = "rio_airbnb"
version = "0.1.0"
description = "Análise dos dados de anúncios e avaliações do Airbnb para o Rio de Janeiro, obtidos do Inside Airbnb"
authors = ["Bruno Rateiro <bruno.rateiro@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "<2.2.0"
pyarrow = "^17.0.0"
dfsummary = "^0.4"
summarytools = "^0.3.0"
distfit = "^1.8.0"
seaborn = "^0.13.2"
matplotlib = "<3.8.0"
scikit-learn = "^1.5.1"
jinja2 = "^3.1.4"
dython = "^0.7.6"
setuptools = "^71.1.0"
plotly = "^5.14.0"
nbformat = "^4.2.0"
hiplot = "^0.1.33"
statsmodels = "^0.14.2"
scipy = "^1.11.4"
folium = "^0.17.0"
seaborn-qqplot = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

